fixed layout shift

--- a/components/animations.css
+++ b/components/animations.css
@@ -45,13 +45,13 @@
 @keyframes fade-in-paragraph {
 	from {
 		opacity: 0;
-		transform: translate(10%, 10%) scale(1.2);
+		transform: scale(1.1);
 	}
 
 	to,
 	50% {
 		opacity: 1;
-		transform: translate(0, 0) scale(1);
+		transform: scale(1);
 	}
 }
 
